--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="/assets/markparse.js"></script>
     <script src="/assets/navigation.js"></script>
     <script src="/assets/redirect.js"></script>
+    <script src="/assets/theme.js"></script>
 </body>
 
 </html>
