--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Firebase Me</title>
     <meta name="description"
         content="Firebase Me is your go-to resource for comprehensive guides, tutorials, and updates on all things Firebase. Stay informed and enhance your app development with expert insights and community contributions.">
-
+    <meta name="robots" content="index, follow">
     <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Firebase Me">
     <meta property="og:description"
