--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
             <img src="/assets/images/icon.png" alt="Icon">
             <h1><a href="#" onclick="goto('home')" style="color: white;">Firebase Me</a></h1>
         </div>
-        <div class="categories" id="category-list">
-            <!-- Categories will be dynamically loaded here -->
+        <div class="menu-row">
+            <div class="categories" id="category-list">
+                <!-- Categories will be dynamically loaded here -->
+                <button>services</button>
+                <button>tutorials</button>
+            </div>
+            <button class="toggle-nav" onclick="toggleNav()">☰</button>
         </div>
-        <button class="toggle-nav" onclick="toggleNav()">☰</button>
     </header>
+
     <div class="container">
         <div class="sidebar" id="sidebar">
             <div class="crumbs" id="crumbtray">
