--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
     <footer class="non-selectable">
         <p>Connect with community and official channels from our <a href="#" onclick="goto('contact')">Contact Page</a>
         </p>
-        <p><a href="#" onclick="goto('privacy')">Privacy Policy</a></p>
+        <p>
+            <a href="#" onclick="goto('privacy')">Privacy Policy</a>
+            <a href="tools.html">Toolbox</a>
+        </p>
     </footer>
     <!-- Theme selection dialog -->
     <div id="theme-dialog" class="theme-dialog non-selectable">
